--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,7 @@
 spring.application.name=ms-prestamo
-server.port = 9004
-
-#MYSQL CONFIGURATION
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/bdBiblioteca
-spring.datasource.username = root
-spring.datasource.password = 060694
-
-#JPA CONFIGURATION
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
 
 #Configuration Eureka Client
 eureka.client.service-url.defaultzone = http://localhost:8761/eureka
 
 #CONFIGURACION DEL SERVER
-#spring.config.import= optional:configserver:http://localhost:8083
+spring.config.import= optional:configserver:http://localhost:8083
